--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.security:security-crypto:1.0.0-rc02'
     implementation project(':base')
 }
 
