--- a/base.gradle
+++ b/base.gradle
@@ -15,8 +15,11 @@ android {
     }
 
     androidExtensions.features = ["parcelize"]
-    dataBinding.enabled = true
-    viewBinding.enabled = true
+//    dataBinding.enabled = true
+//    viewBinding.enabled = true
+    buildFeatures.viewBinding = true
+    buildFeatures.dataBinding = true
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
