--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
+
+
+
+
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
 //    api 'com.google.dagger:dagger-android:2.28.1'
 //    api 'com.google.dagger:dagger-android-support:2.28.1'
 //    kapt 'com.google.dagger:dagger-android-processor:2.28.1'
