--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/BTheme">
         <activity
-            android:name=".AppMain"
+            android:name=".main.AppMain"
             android:label="@string/title_activity_app_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
