--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,14 +4,14 @@ apply from: '../base.gradle'
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.appcompat:appcompat:1.3.0-alpha01'
     api 'androidx.annotation:annotation:1.1.0'
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     api 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     api 'androidx.core:core-ktx:1.3.0'
-    api 'androidx.fragment:fragment-ktx:1.2.5'
+    api 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
     api 'androidx.preference:preference-ktx:1.1.1'
 
     api 'androidx.webkit:webkit:1.2.0'
