--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 apply from: '../base.gradle'
 apply plugin: 'dagger.hilt.android.plugin'
-apply plugin: 'com.google.firebase.crashlytics'// Apply the Crashlytics Gradle plugin
 apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'// Apply the Crashlytics Gradle plugin
 
 android {
     defaultConfig {
@@ -33,10 +33,10 @@ dependencies {
     implementation project(':base')
 
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
-    implementation 'com.facebook.android:facebook-login:7.1.0'
-    implementation('com.twitter.sdk.android:twitter:3.3.0') {
-        transitive = true
-    }
+//    implementation 'com.facebook.android:facebook-login:7.1.0'
+//    implementation('com.twitter.sdk.android:twitter:3.3.0') {
+//        transitive = true
+//    }
 
     implementation 'com.google.dagger:hilt-android:2.28.1-alpha'
     kapt 'com.google.dagger:hilt-android-compiler:2.28.1-alpha'
