--- a/common/build.gradle
+++ b/common/build.gradle
@@ -27,10 +27,11 @@ dependencies {
 
     api 'com.google.android.material:material:1.1.0'
 
+    api 'com.google.firebase:firebase-analytics-ktx:17.4.3'
+    api 'com.google.firebase:firebase-crashlytics:17.1.0'
     api 'com.google.firebase:firebase-core:17.4.3'
     api 'com.google.firebase:firebase-messaging:20.2.1'
     api 'com.google.firebase:firebase-dynamic-links:19.1.0'
-    api 'com.google.firebase:firebase-crashlytics:17.1.0'
     //========================================================
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
