--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,19 @@ android {
             signingConfig signingConfigs.sign
         }
     }
+    buildFeatures.compose = true
+    composeOptions {
+        kotlinCompilerExtensionVersion "${compose_version}"
+        kotlinCompilerVersion '1.3.70-dev-withExperimentalGoogleExtensions-20200424'
+    }
 }
 
 dependencies {
     implementation project(':base')
+
+    implementation "androidx.ui:ui-layout:$compose_version"
+    implementation "androidx.ui:ui-material:$compose_version"
+    implementation "androidx.ui:ui-tooling:$compose_version"
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
