--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name=".ui.login.Login"
-            android:label="@string/title_activity_login">
-
-        </activity>
+            android:name=".ui.profile.Profile"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/BTheme.NoActionBar" />
     </application>
 
 </manifest>
