--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,20 +4,20 @@ apply from: '../base.gradle'
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    api 'androidx.annotation:annotation:1.2.0-alpha01'
     api 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    api 'androidx.annotation:annotation:1.1.0'
+    api 'androidx.fragment:fragment-ktx:1.3.0-alpha07'
+
+
+    api 'androidx.core:core-ktx:1.3.1'
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha06'
     api 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-
-    api 'androidx.core:core-ktx:1.3.0'
-    api 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
     api 'androidx.preference:preference-ktx:1.1.1'
-
     api 'androidx.webkit:webkit:1.2.0'
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
-    api 'androidx.work:work-runtime-ktx:2.3.4'
+    api 'androidx.work:work-runtime-ktx:2.4.0'
     api 'androidx.viewpager2:viewpager2:1.0.0'
 
     api 'androidx.navigation:navigation-fragment:2.3.0'
@@ -27,16 +27,16 @@ dependencies {
 
     api 'com.google.android.material:material:1.1.0'
 
-    api 'com.google.firebase:firebase-analytics-ktx:17.4.3'
-    api 'com.google.firebase:firebase-crashlytics:17.1.0'
-    api 'com.google.firebase:firebase-core:17.4.3'
-    api 'com.google.firebase:firebase-messaging:20.2.1'
+    api 'com.google.firebase:firebase-analytics-ktx:17.4.4'
+    api 'com.google.firebase:firebase-crashlytics:17.1.1'
+    api 'com.google.firebase:firebase-core:17.4.4'
+    api 'com.google.firebase:firebase-messaging:20.2.3'
     api 'com.google.firebase:firebase-dynamic-links:19.1.0'
     //========================================================
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8-1.4.0-rc'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8-1.4.0-rc'
 
-    api 'com.squareup.okhttp3:okhttp:4.7.2'
+    api 'com.squareup.okhttp3:okhttp:4.8.0'
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
@@ -46,8 +46,8 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
-    api 'com.github.eastar-dev:EastarPermission:2.2.2'
+//    api 'com.github.eastar-dev:EastarPermission:2.2.2'
     api 'com.github.eastar-dev:EastarKtx:1.0.8'
-    debugApi 'com.github.eastar-dev.EastarLog2:log:2.0.0'
-    releaseApi 'com.github.eastar-dev.EastarLog2:logNoOp:2.0.0'
+    debugApi 'com.github.eastar-dev.EastarLog2:log:2.0.2'
+    releaseApi 'com.github.eastar-dev.EastarLog2:logNoOp:2.0.2'
 }
